// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/List/Byline Borderless 1`] = `


`;

exports[`Storyshots Components/List/Byline Navigation 1`] = `


`;

exports[`Storyshots Components/List/Byline Navigation indicator 1`] = `


`;

exports[`Storyshots Components/List/Byline Rtl 1`] = `


`;

exports[`Storyshots Components/List/Byline Selection 1`] = `
<section>
  

  <h4
    id="O09lk9"
  >
    Standard Size
  </h4>
  

  <ul
    aria-labelledby="O09lk9"
    class="fd-list fd-list--selection fd-list--byline"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item is-selected"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="O09lk1"
          checked=""
          class="fd-checkbox"
          id="Ai4ez6111Z"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez6111Z"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <span
          class="fd-list__title"
          id="O09lk1"
        >
          Title
        </span>
        
        
        <span
          class="fd-list__byline"
        >
          Byline (description)
        </span>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="O09lk2"
          class="fd-checkbox"
          id="Ai4ez6112X"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez6112X"
          tabindex="-1"
        />
        
      
      </div>
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('http://lorempixel.com/400/400/nature/5/');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
          id="O09lk2"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="O09lk3"
          class="fd-checkbox"
          id="Ai4ez6113C"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez6113C"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
          id="O09lk3"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  


  <h4
    id="O09lk8"
  >
    Compact Size
  </h4>
  

  <ul
    aria-labelledby="O09lk8"
    class="fd-list fd-list--compact fd-list--selection fd-list--byline"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="O09lk4"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6115V"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6115V"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <span
          class="fd-list__title"
          id="O09lk4"
        >
          Title
        </span>
        
        
        <span
          class="fd-list__byline"
        >
          Byline (description)
        </span>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="O09lk5"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6116B"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6116B"
          tabindex="-1"
        />
        
      
      </div>
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('http://lorempixel.com/400/400/nature/5/');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
          id="O09lk5"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          aria-labelledby="O09lk6"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6117N"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6117N"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
          id="O09lk6"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Byline Selection with navigation 1`] = `
<section>
  

  <h4
    id="Ki81L1"
  >
    Standard Size
  </h4>
  

  <ul
    aria-labelledby="Ki81L1"
    class="fd-list fd-list--selection fd-list--byline fd-list--navigation fd-list--navigation-indication"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          aria-labelledby="Ki81L2"
          class="fd-checkbox"
          id="Ai4ez6118N"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label"
          for="Ai4ez6118N"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
    
      <div
        class="fd-list__content"
      >
        
    
        <span
          class="fd-list__title"
          id="Ki81L2"
        >
          Title
        </span>
        
    
        <span
          class="fd-list__byline"
        >
          Byline (description)
        </span>
        
    
      </div>
      
  
    </li>
    
  
    <li
      aria-selected="true"
      class="fd-list__item fd-list__item--link is-selected"
      role="option"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          aria-labelledby="Ki81L3"
          checked=""
          class="fd-checkbox"
          id="Ai4ez6119N"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label"
          for="Ai4ez6119N"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator is-navigated"
        href="#"
        tabindex="0"
      >
        
    
        <span
          aria-label="Image label"
          class="fd-image--s fd-list__thumbnail"
          style="background-image: url('http://lorempixel.com/400/400/nature/5/');"
        />
        
    
        <div
          class="fd-list__content"
        >
          
        
          <div
            class="fd-list__title"
            id="Ki81L3"
          >
            List Item With Two-Column Byline
          </div>
          
        
          <div
            class="fd-list__byline fd-list__byline--2-col"
          >
            
            
            <div
              class="fd-list__byline-left"
            >
              First text item in Byline (Standard text item)
            </div>
            
            
            <div
              class="fd-list__byline-right"
            >
              Second text item in Byline (Can be semantic (Status) or not)
            </div>
            
        
          </div>
          
    
        </div>
        
    
      </a>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--link"
      role="option"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          aria-labelledby="Ki81L4"
          class="fd-checkbox"
          id="Ai4ez61110N"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label"
          for="Ai4ez61110N"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator"
        href="#"
        tabindex="0"
      >
        
      
        <div
          class="fd-list__content"
        >
          
        
          <div
            class="fd-list__title"
            id="Ki81L4"
          >
            Text-Only List Item
          </div>
          
        
          <div
            class="fd-list__byline"
          >
            Byline (description)
          </div>
          
      
        </div>
        
    
      </a>
      
  
    </li>
    

  </ul>
  


  <h4
    id="Ki81L5"
  >
    Compact Size
  </h4>
  

  <ul
    aria-labelledby="Ki81L5"
    class="fd-list fd-list--compact fd-list--selection fd-list--byline fd-list--navigation fd-list--navigation-indication"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item fd-list__item--link"
      role="option"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          aria-labelledby="Ki81L6"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6118CON"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6118CON"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator"
        href="#"
        tabindex="0"
      >
        
      
        <span
          class="sap-icon--activate fd-list__thumbnail"
        />
        
      
        <div
          class="fd-list__content"
        >
          
        
          <span
            class="fd-list__title"
            id="Ki81L6"
          >
            Title
          </span>
          
        
          <span
            class="fd-list__byline"
          >
            Byline (description)
          </span>
          
      
        </div>
        
    
      </a>
      
  
    </li>
    
  
    <li
      class="fd-list__item is-selected"
      role="option"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          aria-labelledby="Ki81L7"
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6119CON"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6119CON"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('http://lorempixel.com/400/400/nature/5/');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
          id="Ki81L7"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--link"
      role="option"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          aria-labelledby="Ki81L8"
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez61110CON"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez61110CON"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator is-navigated"
        href="#"
        tabindex="0"
      >
        
      
        <div
          class="fd-list__content"
        >
          
        
          <div
            class="fd-list__title"
            id="Ki81L8"
          >
            Text-Only List Item
          </div>
          
        
          <div
            class="fd-list__byline"
          >
            Byline (description)
          </div>
          
      
        </div>
        
    
      </a>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Byline Standard 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list fd-list--byline"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Title
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--employee fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With No Byline
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('http://lorempixel.com/400/400/nature/5/');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--compact fd-list--byline"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Title
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--employee fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With No Byline
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('http://lorempixel.com/400/400/nature/5/');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  

</section>
`;
